examples/test/testpolicy13401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13401
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key9: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value18
      podSelector:
        matchLabels:
          key15: value19
          key12: value14
          key24: value29
